refactor(modeling): unify commit mutation journal
Make one ordered journal own each message-to-change step from reduction through accepted cache updates. Remove parallel step collections, encoded result positions, and the duplicate single-target preparation path without changing observable commit behavior.